chore: clean lint script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nodemon ./bot.js",
     "prepare": "husky install",
-    "lint": "npm-run-all --parallel lint:branch-name lint:styles lint:js",
+    "lint": "npm-run-all --parallel lint:js",
     "lint:branch-name": "branch-name-lint ./.branchlintrc.json",
     "lint:commit-name": "commitlint --edit",
     "track-time": "smile-track",
