--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@keyv/sqlite": "^3.0.0",
     "contains-emoji": "^1.1.0",
+    "cyrillic-to-translit-js": "^3.1.0",
     "grapheme-splitter": "^1.0.4",
     "keyv": "^4.1.1",
     "lodash.get": "^4.4.2",
@@ -23,18 +24,18 @@
     "typed-dotenv": "^10.0.1"
   },
   "devDependencies": {
-    "branch-name-lint": "^2.1.1",
-    "husky": "^7.0.2",
-    "npm-run-all": "^4.1.5",
     "@commitlint/config-conventional": "^13.1.0",
+    "branch-name-lint": "^2.1.1",
     "commitlint": "^13.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "prettier": "^2.3.1",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.1",
     "smile-track": "^0.17.0"
   }
 }
