--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./src/bot.js",
+    "start": "nodemon ./src/bot.js --ignore ./telegraf-session.json",
     "prepare": "husky install",
     "lint": "npm-run-all --parallel lint:js",
     "lint:branch-name": "branch-name-lint ./.branchlintrc.json",
@@ -22,6 +22,7 @@
     "lodash.get": "^4.4.2",
     "nodemon": "^2.0.15",
     "telegraf": "^4.7.0",
+    "telegraf-session-local": "^2.1.0",
     "typed-dotenv": "^10.0.1"
   },
   "devDependencies": {
