--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./src/bot.js --ignore ./telegraf-session.json --ignore ./last-ctx.json",
-    "start:prod": "forever start src/bot.js",
+    "start:prod": "node ./src/bot.js",
     "prepare": "husky install",
     "lint": "npm-run-all --parallel lint:js",
     "lint:branch-name": "branch-name-lint ./.branchlintrc.json",
