--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./src/bot.js --ignore ./telegraf-session.json --ignore ./last-ctx.json",
-    "start:prod": "node ./src/bot.js",
+    "start:bot": "nodemon ./src/bot.js --ignore ./telegraf-session.json --ignore ./last-ctx.json",
+    "start:bot:prod": "node ./src/bot.js",
+    "start:server": "pm2 start ./src/express.js -i 3 --watch",
+    "start:server:prod": "pm2 start ./src/express.js -i 3",
     "prepare": "husky install",
     "lint": "npm-run-all --parallel lint:js",
     "lint:branch-name": "branch-name-lint ./.branchlintrc.json",
@@ -17,12 +19,11 @@
     "@keyv/sqlite": "^3.0.0",
     "contains-emoji": "^1.1.0",
     "cyrillic-to-translit-js": "^3.1.0",
-    "forever": "^4.0.3",
+    "express": "^4.17.3",
     "fuse.js": "^6.5.3",
     "grapheme-splitter": "^1.0.4",
     "keyv": "^4.1.1",
     "lodash.get": "^4.4.2",
-    "nodemon": "^2.0.15",
     "telegraf": "^4.7.0",
     "telegraf-session-local": "^2.1.0",
     "typed-dotenv": "^10.0.1"
@@ -38,7 +39,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
+    "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
+    "pm2": "^5.2.0",
     "prettier": "^2.3.1",
     "smile-track": "^0.17.0"
   }
