feat: add host support

--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,10 @@ CHAT_WHITELIST=
 PORT=
 
 ##
+# @optional {string} = localhost
+HOST=
+
+##
 # @optional {boolean} = true
 ONLY_WORK_IN_COMMENTS=
 
