feat: makes BOT_TOKEN and CHAT_WHITELIST optional

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,9 @@
 ##
-# @required {string}
+# @optional {string}
 BOT_TOKEN=
 
 ##
-# @required {number[]}
+# @optional {number[]}
 CHAT_WHITELIST=
 
 ##
