feat: replace session store from local on redis

--- a/.env.template
+++ b/.env.template
@@ -15,6 +15,10 @@ PORT=
 HOST=
 
 ##
+# @optional {string} = 'redis://localhost:6379'
+REDIS_URL=
+
+##
 # @optional {boolean} = true
 USE_SERVER=
 
