--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "husky": "^7.0.2",
     "keyv": "^4.1.1",
     "lodash.get": "^4.4.2",
+    "redis": "^4.0.4",
     "telegraf": "^4.7.0",
-    "telegraf-session-local": "^2.1.0",
     "typed-dotenv": "^10.0.1"
   },
   "devDependencies": {
