chore(IMOCA-356): fix REDIS_URL default value

--- a/.env.template
+++ b/.env.template
@@ -15,7 +15,7 @@ PORT=
 HOST=
 
 ##
-# @optional {string} = 'redis://localhost:6379'
+# @optional {string} = redis://localhost:6379
 REDIS_URL=
 
 ##
