feat: added axios client, cron worker for saving session data from redis to psql

--- a/.env.template
+++ b/.env.template
@@ -31,24 +31,24 @@ ONLY_WORK_IN_COMMENTS=
 DEBUG=
 
 ##
-# @optional {string} = secret
-POSTGRES_PASSWORD=
+# @optional {string} = localhost
+PG_HOST=
 
 ##
 # @optional {string} = postgres
-PGHOST=
-
-##
-# @optional {string} = postgres
-PGUSER=
-
-##
-# @optional {string} = postgres
-PGDATABASE=
+PG_DATABASE=
 
 ##
 # @optional {string} = 5432
-PGPORT=
+PG_PORT=
+
+##
+# @optional {string} = postgres
+PG_USER=
+
+##
+# @optional {string} = secret
+PG_PASSWORD=
 
 ##
 # @optional {boolean} = false
