--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@grammyjs/menu": "^1.0.4",
     "@grammyjs/parse-mode": "^1.0.0",
+    "@grammyjs/router": "^1.1.1",
     "@keyv/sqlite": "^3.0.0",
     "axios": "^0.26.0",
     "contains-emoji": "^1.1.0",
