--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@grammyjs/menu": "^1.0.4",
     "@grammyjs/parse-mode": "^1.0.0",
+    "@grammyjs/transformer-throttler": "^1.1.1",
     "@keyv/sqlite": "^3.0.0",
     "@tensorflow/tfjs": "^3.14.0",
     "@tensorflow/tfjs-node": "^3.14.0",
