--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@grammyjs/menu": "^1.0.4",
     "@grammyjs/parse-mode": "^1.0.0",
     "@grammyjs/router": "^1.1.1",
+    "@grammyjs/transformer-throttler": "^1.1.1",
     "@keyv/sqlite": "^3.0.0",
     "@tensorflow/tfjs": "^3.14.0",
     "@tensorflow/tfjs-node": "^3.14.0",
