--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lodash.get": "^4.4.2",
     "redis": "^4.0.6",
     "typed-dotenv": "^10.0.1",
+    "typegram": "^3.8.0",
     "ukrainian-ml-optimizer": "github:DrSmile444/ukrainian-ml-optimizer"
   },
   "devDependencies": {
