--- a/.env.template
+++ b/.env.template
@@ -43,6 +43,10 @@ ONLY_WORK_IN_COMMENTS=
 DEBUG=
 
 ##
+# @optional {boolean} = false
+DEBUG_MIDDLEWARE=
+
+##
 # @optional {string} = secret
 POSTGRES_PASSWORD=
 
