feat(IMOCA-356): add userbot to check all user messages

--- a/.env.template
+++ b/.env.template
@@ -47,6 +47,26 @@ DEBUG=
 DEBUG_MIDDLEWARE=
 
 ##
+# @optional {string}
+USERBOT_APP_ID=
+
+##
+# @optional {string}
+USERBOT_API_HASH=
+
+##
+# @optional {string}
+USERBOT_LOGIN_PHONE=
+
+##
+# @optional {string}
+USERBOT_LOGIN_CODE=
+
+##
+# @optional {string}
+USERBOT_TRAING_CHAT_NAME=
+
+##
 # @optional {string} = secret
 POSTGRES_PASSWORD=
 
