--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.26.1",
     "contains-emoji": "^1.1.0",
     "cyrillic-to-translit-js": "^3.1.0",
+    "diff": "^5.0.0",
     "express": "^4.17.3",
     "fuse.js": "^6.5.3",
     "grammy": "^1.7.1",
