fix: update env template

--- a/.env.template
+++ b/.env.template
@@ -118,3 +118,14 @@ CHANNEL_MSG_REPUTATION=
 # @optional {string}
 GOOGLE_CREDITS=
 
+##
+# @optional {string} =
+GOOGLE_SPREADSHEET_ID=
+
+##
+# @optional {string} =
+GOOGLE_POSITIVE_SHEET_NAME=
+
+##
+# @optional {string} =
+GOOGLE_NEGATIVE_SHEET_NAME=
