fix(IMOCA-356): fix .env.template

--- a/.env.template
+++ b/.env.template
@@ -119,13 +119,13 @@ CHANNEL_MSG_REPUTATION=
 GOOGLE_CREDITS=
 
 ##
-# @optional {string} =
+# @optional {string}
 GOOGLE_SPREADSHEET_ID=
 
 ##
-# @optional {string} =
+# @optional {string}
 GOOGLE_POSITIVE_SHEET_NAME=
 
 ##
-# @optional {string} =
+# @optional {string}
 GOOGLE_NEGATIVE_SHEET_NAME=
