feat(IMOCA-356): load tensor flow model from s3

--- a/.env.template
+++ b/.env.template
@@ -149,3 +149,11 @@ GOOGLE_POSITIVE_SHEET_NAME=
 ##
 # @optional {string}
 GOOGLE_NEGATIVE_SHEET_NAME=
+
+##
+# @optional {string}
+S3_BUCKET=
+
+##
+# @optional {string}
+S3_PATH=
