--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mtproto/core": "6.2.0",
     "@tensorflow/tfjs": "^3.15.0",
     "@tensorflow/tfjs-node": "^3.15.0",
+    "aws-sdk": "^2.1130.0",
     "axios": "^0.26.1",
     "contains-emoji": "^1.1.0",
     "cyrillic-to-translit-js": "^3.1.0",
