--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "smile-track": "^0.17.0"
+    "smile-track": "^0.17.0",
+    "string-similarity": "^4.0.4"
   }
 }
