--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash.get": "^4.4.2",
     "queue-promise": "^2.2.1",
     "redis": "^4.0.6",
+    "string-similarity": "^4.0.4",
     "typed-dotenv": "^10.0.1",
     "typegram": "^3.8.0",
     "ukrainian-ml-optimizer": "github:DrSmile444/ukrainian-ml-optimizer"
