--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "smile-track": "^0.17.0",
-    "string-similarity": "^4.0.4"
+    "smile-track": "^0.17.0"
   }
 }
