feat(IMOCA-356): add swindler support

--- a/.env.template
+++ b/.env.template
@@ -152,6 +152,10 @@ GOOGLE_NEGATIVE_SHEET_NAME=
 
 ##
 # @optional {string}
+GOOGLE_SWINDLERS_SHEET_NAME=
+
+##
+# @optional {string}
 S3_BUCKET=
 
 ##
