--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mtproto/core": "6.2.0",
     "@tensorflow/tfjs": "^3.15.0",
     "@tensorflow/tfjs-node": "^3.15.0",
+    "@types/fuzzyset": "^1.0.4",
     "aws-sdk": "^2.1130.0",
     "axios": "^0.26.1",
     "contains-emoji": "^1.1.0",
@@ -33,6 +34,7 @@
     "diff": "^5.0.0",
     "express": "^4.17.3",
     "fuse.js": "^6.5.3",
+    "fuzzyset": "^1.0.7",
     "google-auth-library": "^8.0.1",
     "googleapis": "^100.0.0",
     "grammy": "^1.7.1",
