feat(IMOCA-356): add jest

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grammy": "^1.7.1",
     "grapheme-splitter": "^1.0.4",
     "husky": "^7.0.4",
+    "jest": "^28.1.1",
     "keyv": "^4.2.1",
     "lodash.get": "^4.4.2",
     "queue-promise": "^2.2.1",
@@ -59,6 +60,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.0.0",
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
