--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   ],
   "root": true,
   "extends": [
+    "./.eslint/jest.eslintrc.json",
     "./.eslint/node.eslintrc.json",
     "./.eslint/smile-style.eslintrc.json",
     "./.eslint/prettier.eslintrc.json"
