--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start:bot": "nodemon ./src/bot.js --max_old_space_size=2048",
     "start:bot:prod": "node ./src/bot.js",
+    "start:userbot:eternal": "forever ./src/userbot",
     "start:userbot:prod": "node ./src/userbot",
     "start:server": "nodemon ./src/express.js --max_old_space_size=2048",
     "start:server:prod": "node ./src/express.js",
@@ -63,6 +64,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "forever": "^4.0.3",
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
