--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:server:prod": "node ./src/express.js",
     "start:server:cluster": "pm2 start ./src/express.js -i 3 --watch || echo '*** Install PM2 globally'",
     "download-swindler": "node ./dataset/download-swindler-dataset.js && node ./dataset/auto-swindlers.js && node ./dataset/get-swindlers-top-used.js",
+    "optimize-swindler": "node ./dataset/optimize-swindler-dataset.js positives && node ./dataset/optimize-swindler-dataset.js negatives",
     "prepare": "husky install",
     "test": "jest",
     "lint": "npm-run-all --parallel lint:js",
@@ -69,6 +70,8 @@
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "smile-track": "^0.17.0"
+    "queue": "^6.0.2",
+    "smile-track": "^0.17.0",
+    "worker-farm": "^1.7.0"
   }
 }
