--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:server": "nodemon ./src/express.js --max_old_space_size=2048",
     "start:server:prod": "node ./src/express.js",
     "start:server:cluster": "pm2 start ./src/express.js -i 3 --watch || echo '*** Install PM2 globally'",
-    "download-swindler": "node ./dataset/download-swindler-dataset.js && node ./dataset/auto-swindlers.js",
+    "download-swindler": "node ./dataset/download-swindler-dataset.js && npm run optimize-swindler",
     "optimize-swindler": "node ./dataset/optimize-swindler-dataset.js positives && node ./dataset/optimize-swindler-dataset.js negatives",
     "prepare": "husky install",
     "test": "jest",
