--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
+    "queue": "^6.0.2",
     "smile-track": "^0.17.0",
     "worker-farm": "^1.7.0"
   }
