--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "jest": "^28.1.1",
     "keyv": "^4.2.1",
     "lodash.get": "^4.4.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
     "queue-promise": "^2.2.1",
     "redis": "^4.0.6",
     "string-similarity": "^4.0.4",
