--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,7 @@
   "env": {
     "es2021": true
   },
-  "ignorePatterns": [
-    "!src/**/*.{ts,js}",
-    "node_modules"
-  ],
+  "ignorePatterns": ["!src/**/*.{ts,js}", "node_modules"],
   "root": true,
   "extends": [
     "./.eslint/typescript.eslintrc.json",
@@ -19,6 +16,22 @@
     "./.eslint/prettier.eslintrc.json"
   ],
   "rules": {
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "ts": "never"
+      }
+    ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
   }
 }
