--- a/package.json
+++ b/package.json
@@ -60,19 +60,21 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unicorn": "^43.0.2",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/validator": "^13.7.4",
     "branch-name-lint": "^2.1.1",
     "commitlint": "^16.2.3",
     "cors": "^2.8.5",
-    "eslint": "^8.12.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unicorn": "^43.0.2",
     "forever": "^4.0.3",
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
