chore(UABOT-41): update jest config and add packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "strict": true,
     "skipLibCheck": true,
+    "types": ["jest"],
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
