--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "grammy": "^1.7.1",
     "grapheme-splitter": "^1.0.4",
     "husky": "^7.0.4",
-    "jest": "^28.1.1",
+    "jest": "^29.0.3",
     "keyv": "^4.2.1",
     "lodash.get": "^4.4.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
+    "p-iteration": "^1.1.8",
     "queue-promise": "^2.2.1",
     "redis": "^4.0.6",
     "string-similarity": "^4.0.4",
@@ -62,6 +63,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^16.2.1",
     "@types/eventsource": "^1.1.9",
+    "@types/jest": "^29.0.3",
     "@types/validator": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
@@ -83,6 +85,10 @@
     "prettier": "^2.6.2",
     "queue": "^6.0.2",
     "smile-track": "^0.17.0",
+    "ts-jest": "^29.0.2",
+    "type-fest": "^3.0.0",
+    "typed-emitter": "^2.1.0",
+    "typescript": "^4.8.4",
     "worker-farm": "^1.7.0"
   }
 }
