--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@types/eventsource": "^1.1.9",
     "@types/jest": "^29.0.3",
+    "@types/string-similarity": "^4.0.0",
     "@types/validator": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
