--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,13 @@
     "strict": true,
     "skipLibCheck": true,
     "types": ["jest"],
+    "typeRoots": [
+      "node_modules/@types",
+      "src/lib-types"
+    ],
+    "paths":{
+      "@mtproto/core": ["./src/lib-types/mtproto__core"]
+    },
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
@@ -18,5 +25,5 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Recommended",
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "src/lib-types/**"]
 }
