--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start:bot": "nodemon src/bot.ts --max_old_space_size=2048",
     "start:bot:prod": "node src/bot.ts",
     "start:userbot:eternal": "forever ./src/userbot",
-    "start:userbot:prod": "node ./src/userbot",
-    "start:server": "nodemon ./src/express.js --max_old_space_size=2048",
-    "start:server:prod": "node ./src/express.js",
-    "start:server:cluster": "pm2 start ./src/express.js -i 3 --watch || echo '*** Install PM2 globally'",
+    "start:userbot:prod": "ts-node ./src/userbot",
+    "start:server": "nodemon ./src/express.server.ts --max_old_space_size=2048",
+    "start:server:prod": "ts-node ./src/express.server.ts",
+    "start:server:cluster": "pm2 start ./src/express.server.ts -i 3 --watch || echo '*** Install PM2 globally'",
     "download-swindler": "node ./dataset/download-swindler-dataset.js && npm run optimize-swindler",
     "optimize-swindler": "node ./dataset/optimize-swindler-dataset.js positives && node ./dataset/optimize-swindler-dataset.js negatives",
     "prepare": "husky install",
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
     "@types/eventsource": "^1.1.9",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
     "@types/string-similarity": "^4.0.0",
     "@types/validator": "^13.7.7",
@@ -87,6 +88,7 @@
     "queue": "^6.0.2",
     "smile-track": "^0.17.0",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "type-fest": "^3.0.0",
     "typed-emitter": "^2.1.0",
     "typescript": "^4.8.4",
