--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@keyv/sqlite": "^3.6.1",
     "@mtproto/core": "6.2.0",
     "@tensorflow/tfjs": "^3.21.0",
-    "@tensorflow/tfjs-node": "^3.21.0",
+    "@tensorflow/tfjs-node": "^3.21.1",
     "@types/fuzzyset": "^1.0.4",
     "aws-sdk": "^2.1230.0",
     "axios": "^1.0.0",
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
+    "@swc/core": "^1.3.8",
     "@types/eventsource": "^1.1.9",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
