feat(UABOT-41): add userboot better typing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "strictNullChecks": true,
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
