feat(UABOT-41): update dataset optimization for typescript

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start:server": "nodemon ./src/express.server.ts --max_old_space_size=2048",
     "start:server:prod": "ts-node ./src/express.server.ts",
     "start:server:cluster": "pm2 start ./src/express.server.ts -i 3 --watch || echo '*** Install PM2 globally'",
-    "download-swindler": "node ./dataset/download-swindler-dataset.js && npm run optimize-swindler",
-    "optimize-swindler": "node ./dataset/optimize-swindler-dataset.js positives && node ./dataset/optimize-swindler-dataset.js negatives",
+    "download-swindler": "ts-node dataset/download-swindler-dataset.ts && npm run optimize-swindler",
+    "optimize-swindler": "ts-node dataset/optimize-swindler-dataset.ts positives && ts-node dataset/optimize-swindler-dataset.ts negatives",
     "prepare": "husky install",
     "test": "jest",
     "lint": "npm-run-all --parallel lint:js",
