--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,17 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "types": ["jest"],
+    "types": [
+      "jest"
+    ],
     "typeRoots": [
       "node_modules/@types",
       "src/lib-types"
     ],
-    "paths":{
-      "@mtproto/core": ["./src/lib-types/mtproto__core"]
+    "paths": {
+      "@mtproto/core": [
+        "./src/lib-types/mtproto__core"
+      ]
     },
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
@@ -28,6 +32,13 @@
   "moduleResolution": "node",
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Recommended",
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts", "src/lib-types/**"]
+  "include": [
+    "src/**/*",
+    "dataset/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "src/lib-types/**"
+  ]
 }
