--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start:bot": "nodemon src/bot.ts --max_old_space_size=2048",
-    "start:bot:prod": "node src/bot.ts",
+    "start:bot:prod": "ts-node src/bot.ts",
     "start:userbot:eternal": "forever -c ts-node ./src/userbot/index.ts",
     "start:userbot:prod": "ts-node ./src/userbot/index.ts",
     "start:server": "nodemon ./src/express.server.ts --max_old_space_size=2048",
