--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
     "@swc/core": "^1.3.8",
+    "@swc/jest": "^0.2.23",
     "@types/eventsource": "^1.1.9",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
