--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@grammyjs/parse-mode": "^1.4.0",
     "@grammyjs/router": "^2.0.0",
     "@grammyjs/transformer-throttler": "^1.1.2",
+    "@grammyjs/types": "^2.9.1",
     "@keyv/sqlite": "^3.6.1",
     "@mtproto/core": "6.2.0",
     "@tensorflow/tfjs": "^3.21.0",
