--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "start:bot": "nodemon src/bot.ts --max_old_space_size=2048",
     "start:bot:prod": "ts-node src/bot.ts",
-    "start:userbot:eternal": "forever -c ts-node ./src/userbot/index.ts",
-    "start:userbot:prod": "ts-node ./src/userbot/index.ts",
+    "start:bot:js:prod": "node dist/src/bot.js",
+    "start:userbot:eternal": "forever -c ts-node --transpile-only ./src/userbot/index.ts",
+    "start:userbot:prod": "ts-node --transpile-only ./src/userbot/index.ts",
     "start:server": "nodemon ./src/express.server.ts --max_old_space_size=2048",
     "start:server:prod": "ts-node ./src/express.server.ts",
+    "start:server:js:prod": "node ./dist/src/express.server.js",
     "start:server:cluster": "pm2 start ./src/express.server.ts -i 3 --watch || echo '*** Install PM2 globally'",
+    "build": "FROM=src npm run build:folder && FROM=dataset npm run build:folder",
+    "build:folder": "swc $FROM --copy-files --out-dir dist/$FROM --config-file .swcrc.json",
     "download-swindler": "ts-node dataset/download-swindler-dataset.ts && npm run optimize-swindler",
     "optimize-swindler": "ts-node dataset/optimize-swindler-dataset.ts positives && ts-node dataset/optimize-swindler-dataset.ts negatives",
     "prepare": "husky install",
@@ -22,6 +26,8 @@
     "lint:js:fix": "npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.8",
     "@grammyjs/menu": "^1.1.2",
     "@grammyjs/parse-mode": "^1.4.0",
     "@grammyjs/router": "^2.0.0",
@@ -63,7 +69,6 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
-    "@swc/core": "^1.3.8",
     "@swc/jest": "^0.2.23",
     "@types/eventsource": "^1.1.9",
     "@types/express": "^4.17.14",
