feat(UABOT-59): add creator and private commands list

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start:bot": "nodemon src/bot.ts --max_old_space_size=2048",
     "start:bot:prod": "ts-node src/bot.ts",
     "start:bot:js:prod": "node dist/src/bot.js",
-    "start:userbot:eternal": "forever -c ts-node --transpile-only ./src/userbot/index.ts",
-    "start:userbot:prod": "ts-node --transpile-only ./src/userbot/index.ts",
+    "start:userbot:eternal": "forever -c ts-node ./src/userbot/index.ts --transpile-only",
+    "start:userbot:prod": "ts-node ./src/userbot/index.ts --transpile-only",
     "start:server": "nodemon ./src/express.server.ts --max_old_space_size=2048",
     "start:server:prod": "ts-node ./src/express.server.ts",
     "start:server:js:prod": "node ./dist/src/express.server.js",
