feat(UABOT-70): add bot port and host dedicated settings

--- a/.env.template
+++ b/.env.template
@@ -11,12 +11,20 @@ CHAT_WHITELIST=
 PORT=
 
 ##
-# @optional {number}
-CREATOR_ID=
+# @optional {string} = localhost
+HOST=
+
+##
+# @optional {number} = 3010
+BOT_PORT=
 
 ##
 # @optional {string} = localhost
-HOST=
+BOT_HOST=
+
+##
+# @optional {number}
+CREATOR_ID=
 
 ##
 # @optional {number} = 0.90
