--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -15,4 +15,6 @@ RUN npm i --only=production
 # Bundle app source
 COPY . .
 
-CMD [ "npm", "run", "start:server:js:prod" ]
+CMD [ "npm", "run", "build" ]
+
+CMD [ "npm", "run", "start:server:prod" ]
