Revert "feat(UABOT-70): update bot dockers"
This reverts commit 81812341711c710e67981f4a7bec4d6a8f7e3f38.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start:userbot:eternal": "forever -c ts-node ./src/userbot/index.ts --transpile-only",
     "start:userbot:prod": "ts-node ./src/userbot/index.ts --transpile-only",
     "start:server": "nodemon ./src/express.server.ts --max_old_space_size=2048",
-    "start:server:prod": "node ./dist/src/express.server.js",
-    "start:server:ts:prod": "ts-node ./src/express.server.ts",
+    "start:server:prod": "ts-node ./src/express.server.ts",
+    "start:server:js:prod": "node ./dist/src/express.server.js",
     "start:server:cluster": "pm2 start ./src/express.server.ts -i 3 --watch || echo '*** Install PM2 globally'",
     "build": "FROM=src npm run build:folder && FROM=dataset npm run build:folder",
     "build:folder": "swc $FROM --copy-files --out-dir dist/$FROM --config-file .swcrc.json",
