--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -15,6 +15,4 @@ RUN npm i --only=production
 # Bundle app source
 COPY . .
 
-CMD [ "npm", "run", "build" ]
-
-CMD [ "npm", "run", "start:server:prod" ]
+CMD [ "npm", "run", "start:server:js:prod" ]
