--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lodash.get": "^4.4.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.38",
+    "ms": "^2.1.3",
     "p-iteration": "^1.1.8",
     "queue-promise": "^2.2.1",
     "redis": "^4.3.1",
@@ -76,6 +77,7 @@
     "@types/eventsource": "^1.1.10",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
+    "@types/ms": "^0.7.31",
     "@types/string-similarity": "^4.0.0",
     "@types/validator": "^13.7.9",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
