--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "contains-emoji": "^1.1.4",
     "cyrillic-to-translit-js": "^3.2.1",
     "diff": "^5.1.0",
+    "escape-html": "^1.0.3",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
     "fuse.js": "^6.6.2",
@@ -76,6 +77,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
     "@swc/jest": "^0.2.23",
+    "@types/escape-html": "^1.0.2",
     "@types/eventsource": "^1.1.10",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
