--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start:bot": "nodemon src/bot.ts --max_old_space_size=2048",
-    "start:bot:prod": "ts-node --transpile-only src/bot.ts",
-    "start:bot:js:prod": "node dist/src/bot.js",
+    "start:bot": "nodemon src/index.ts --max_old_space_size=2048",
+    "start:bot:prod": "ts-node --transpile-only src/index.ts",
+    "start:bot:js:prod": "node dist/src/index.js",
     "start:userbot:eternal": "forever -c ts-node ./src/userbot/index.ts --transpile-only",
     "start:userbot:prod": "ts-node ./src/userbot/index.ts --transpile-only",
     "start:server": "nodemon ./src/express.server.ts --max_old_space_size=2048",
