--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "p-iteration": "^1.1.8",
     "queue-promise": "^2.2.1",
     "redis": "^4.5.1",
+    "sharp": "^0.31.2",
     "string-similarity": "^4.0.4",
     "typed-dotenv": "^10.0.2",
     "typegram": "^4.1.1",
@@ -84,6 +85,7 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/ms": "^0.7.31",
+    "@types/sharp": "^0.31.0",
     "@types/string-similarity": "^4.0.0",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
