--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "escape-html": "^1.0.3",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "fuse.js": "^6.6.2",
     "fuzzyset": "^1.0.7",
     "google-auth-library": "^8.7.0",
@@ -66,6 +67,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
     "nsfwjs": "file:src/packages/nsfwjs-2.4.2.tgz",
     "p-iteration": "^1.1.8",
     "queue-promise": "^2.2.1",
@@ -85,6 +87,7 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/ms": "^0.7.31",
+    "@types/multer": "^1.4.7",
     "@types/sharp": "^0.31.0",
     "@types/string-similarity": "^4.0.0",
     "@types/validator": "^13.7.10",
