--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "escape-html": "^1.0.3",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
+    "ffmpeg-static": "^5.1.0",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "fuse.js": "^6.6.2",
     "fuzzyset": "^1.0.7",
@@ -85,6 +88,8 @@
     "@types/escape-html": "^1.0.2",
     "@types/eventsource": "^1.1.10",
     "@types/express": "^4.17.15",
+    "@types/ffprobe-static": "^2.0.1",
+    "@types/fluent-ffmpeg": "^2.1.20",
     "@types/jest": "^29.2.4",
     "@types/ms": "^0.7.31",
     "@types/multer": "^1.4.7",
