feat(UABOT-18): create delayed async queue service with rabbitmq

--- a/.env.template
+++ b/.env.template
@@ -186,3 +186,11 @@ ALARM_KEY=
 ##
 # @optional {string}
 USERS_WHITELIST=00000001, 0000002, -10000000
+
+##
+# @optional {string}
+RABBITMQ_USER=
+
+##
+# @optional {string}
+RABBITMQ_PASS=
