--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tensorflow/tfjs": "^4.0.0",
     "@tensorflow/tfjs-node": "^4.0.0",
     "@types/fuzzyset": "^1.0.4",
+    "amqplib": "^0.10.3",
     "aws-sdk": "^2.1238.0",
     "axios": "^1.1.3",
     "bottleneck": "^2.19.5",
@@ -73,11 +74,13 @@
     "typed-dotenv": "^10.0.2",
     "typegram": "^4.0.0",
     "ukrainian-ml-optimizer": "github:DrSmile444/ukrainian-ml-optimizer",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
     "@swc/jest": "^0.2.23",
+    "@types/amqplib": "^0.10.1",
     "@types/escape-html": "^1.0.2",
     "@types/eventsource": "^1.1.10",
     "@types/express": "^4.17.14",
