--- a/.env.template
+++ b/.env.template
@@ -1,188 +1,382 @@
 ##
+# Describes current environment
 # 'local' | 'develop' | 'production'
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
 # @optional {string} = develop
 ENV=
 
 ##
+# Bot token to authenticate in Telegram.
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+#
 # @optional {string}
 BOT_TOKEN=
 
 ##
+# It was used for whitelisting the bot in specific chats. Now it's not actual
+#
+# Deprecated ⛔️
+#
 # @optional {number[]}
 CHAT_WHITELIST=
 
 ##
+# Port of the express application.
+#
+# Used only for express server. 🖥️
+# Production required. ✅
+#
 # @optional {number} = 3000
 PORT=
 
 ##
+# Host of the express application.
+#
+# Used only for express server. 🖥️
+# Production required. ✅
+#
 # @optional {string} = localhost
 HOST=
 
 ##
+# Port of the bot process.
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+#
 # @optional {number} = 3010
 BOT_PORT=
 
 ##
+# Host of the bot process.
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+#
 # @optional {string} = localhost
 BOT_HOST=
 
 ##
+# Specify custom CREATOR_ID for testing it locally.
+#
+# Used only for bot process. 🤖
+# Only for testing. 🧪
+#
 # @optional {number}
 CREATOR_ID=
 
 ##
-# @optional {number} = 0.90
+# Rank for tensorflow checking if this is a spam.
+# E.g., tesnor could give 0.85 rate, but the TENSOR_RANK value is 0.9 so it won't be assumed as spam.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
+# @optional {number} = 0.9
 TENSOR_RANK=
 
 ##
+# Url to the Redis instance.
+#
+# Used only for bot process. 🤖
+# Used for local userbot. 🐬
+# Production required. ✅
+#
 # @optional {string} = redis://localhost:6379
 REDIS_URL=
 
 ##
+# It was used to log details about the model that was used for tesnorflow.
+#
+# Only for testing. 🧪
+# Deprecated ⛔️
+#
 # @optional {boolean} = false
 TEST_TENSOR=
 
 ##
+# If true allows to run all calculating logic on one bot process.
+#
+# Used only for bot process. 🤖
+# Only for testing. 🧪
+#
 # @optional {boolean} = true
 USE_SERVER=
 
 ##
+# To work bot only in comments. It is almost not used in the bot anymore.
+#
+# Used only for bot process. 🤖
+# Deprecated ⛔️
+#
 # @optional {boolean} = true
 ONLY_WORK_IN_COMMENTS=
 
 ##
+# Used to show additional logs in the application.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Only for testing. 🧪
+#
 # @optional {boolean} = false
 DEBUG=
 
 ##
+# It shows why bot has skipped the message from checking.
+#
+# Used only for bot process. 🤖
+# Only for testing. 🧪
+#
 # @optional {boolean} = false
 DEBUG_MIDDLEWARE=
 
 ##
+# Id of the application for the custom telegram client.
+# Could be checked here: https://my.telegram.org/auth
+#
+# Used for local userbot. 🐬
+# Only for testing. 🧪
+#
 # @optional {string}
 USERBOT_APP_ID=
 
 ##
+# Hash of the application.
+#
+# Used for local userbot. 🐬
+# Only for testing. 🧪
+#
 # @optional {string}
 USERBOT_API_HASH=
 
 ##
+# Phone for userbot login.
+#
+# Used for local userbot. 🐬
+# Only for testing. 🧪
+#
 # @optional {string}
 USERBOT_LOGIN_PHONE=
 
 ##
+# Code, that was received when you have logger in the application.
+#
+# Used for local userbot. 🐬
+# Only for testing. 🧪
+#
 # @optional {string}
 USERBOT_LOGIN_CODE=
 
 ##
+# Name of the chat where we classify spam or not spam.
+# Could be deleted.
+#
+# Used for local userbot. 🐬
+# Only for testing. 🧪
+# Deprecated ⛔️
+#
 # @optional {string}
 USERBOT_TRAING_CHAT_NAME=
 
 ##
+# Deprecated ⛔️
 # @optional {string} = secret
 POSTGRES_PASSWORD=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {string} = postgres
 PGHOST=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {string} = postgres
 PGUSER=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {string} = postgres
 PGDATABASE=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {string} = 5432
 PGPORT=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {boolean} = false
 DISABLE_USER_REP=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = 1000
 START_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = 100
 CHANNEL_START_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = -10
 EMOJI_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = -10
 FORMATTINGS_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = -10
 URLS_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = 5
 NEW_MESSAGE_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = 100
 START_MSG_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = -5
 FORMATTINGS_MSG_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = -5
 EMOJI_MSG_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = -80
 URLS_MSG_REPUTATION=
 
 ##
+# Old logic.
+# Deprecated ⛔️
 # @optional {number} = -100
 CHANNEL_MSG_REPUTATION=
 
 ##
+# Google credentials for google service account. Used only for accessing google sheets.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
 # @optional {string}
 GOOGLE_CREDITS=
 
 ##
+# Id of the main spreadsheet that we used for Anti Spam Bot.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
 # @optional {string}
 GOOGLE_SPREADSHEET_ID=
 
 ##
+# Name of the positive sheet for anti-strategic feature.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Should be Deprecated ⛔️
+#
 # @optional {string}
 GOOGLE_POSITIVE_SHEET_NAME=
 
 ##
+# Name of the negative sheet for anti-strategic feature.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Should be Deprecated ⛔️
+#
 # @optional {string}
 GOOGLE_NEGATIVE_SHEET_NAME=
 
 ##
+# Name of the swindlers sheet for anti-strategic feature.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Should be Deprecated ⛔️
+#
 # @optional {string}
 GOOGLE_SWINDLERS_SHEET_NAME=
 
 ##
+# Name of the S3 bucket.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Optional for local. 🦕
+#
 # @optional {string}
 S3_BUCKET=
 
 ##
+# Url of the S3 bucket.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Optional for local. 🦕
+#
 # @optional {string}
 S3_PATH=
 
 ##
+# Region of the S3 bucket.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Optional for local. 🦕
+#
 # @optional {string}
 AWS_REGION=
 
 ##
+# Alarm key for air raid feature
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+#
 # @optional {string}
 ALARM_KEY=
 
 ##
+# Telegram user ids who will access private features
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+# Optional for local. 🦕
+#
 # @optional {string}
 USERS_WHITELIST=00000001, 0000002, -10000000
