chore(UABOT-116): change the order of .env.template variables

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,16 @@
+##########
+##########
+########## Production required. ✅
+########## This is keys which are required for production and could not be skipped in order to work in bot.
+##########
+##########
+
+##########
+##########
+########## Used for both bot and server process. 🤖 🖥️
+##########
+##########
+
 ##
 # Describes current environment
 # 'local' | 'develop' | 'production'
@@ -9,6 +22,104 @@
 ENV=
 
 ##
+# Rank for tensorflow checking if this is a spam.
+# E.g., tesnor could give 0.85 rate, but the TENSOR_RANK value is 0.9 so it won't be assumed as spam.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
+# @optional {number} = 0.9
+TENSOR_RANK=
+
+##
+# Google credentials for google service account. Used only for accessing google sheets.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
+# @optional {string}
+GOOGLE_CREDITS=
+
+##
+# Id of the main spreadsheet that we used for Anti Spam Bot.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
+# @optional {string}
+GOOGLE_SPREADSHEET_ID=
+
+##
+# Name of the positive sheet for anti-strategic feature.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Should be Deprecated ⛔️
+#
+# @optional {string}
+GOOGLE_POSITIVE_SHEET_NAME=
+
+##
+# Name of the negative sheet for anti-strategic feature.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Should be Deprecated ⛔️
+#
+# @optional {string}
+GOOGLE_NEGATIVE_SHEET_NAME=
+
+##
+# Name of the swindlers sheet for anti-strategic feature.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Should be Deprecated ⛔️
+#
+# @optional {string}
+GOOGLE_SWINDLERS_SHEET_NAME=
+
+##
+# Name of the S3 bucket.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Optional for local. 🦕
+#
+# @optional {string}
+S3_BUCKET=
+
+##
+# Url of the S3 bucket.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Optional for local. 🦕
+#
+# @optional {string}
+S3_PATH=
+
+##
+# Region of the S3 bucket.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+# Optional for local. 🦕
+#
+# @optional {string}
+AWS_REGION=
+
+
+
+######
+######
+###### Used only for bot process. 🤖
+######
+######
+
+
+
+##
 # Bot token to authenticate in Telegram.
 #
 # Used only for bot process. 🤖
@@ -16,32 +127,6 @@ ENV=
 #
 # @optional {string}
 BOT_TOKEN=
-
-##
-# It was used for whitelisting the bot in specific chats. Now it's not actual
-#
-# Deprecated ⛔️
-#
-# @optional {number[]}
-CHAT_WHITELIST=
-
-##
-# Port of the express application.
-#
-# Used only for express server. 🖥️
-# Production required. ✅
-#
-# @optional {number} = 3000
-PORT=
-
-##
-# Host of the express application.
-#
-# Used only for express server. 🖥️
-# Production required. ✅
-#
-# @optional {string} = localhost
-HOST=
 
 ##
 # Port of the bot process.
@@ -62,42 +147,72 @@ BOT_PORT=
 BOT_HOST=
 
 ##
-# Specify custom CREATOR_ID for testing it locally.
-#
-# Used only for bot process. 🤖
-# Only for testing. 🧪
-#
-# @optional {number}
-CREATOR_ID=
-
-##
-# Rank for tensorflow checking if this is a spam.
-# E.g., tesnor could give 0.85 rate, but the TENSOR_RANK value is 0.9 so it won't be assumed as spam.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-#
-# @optional {number} = 0.9
-TENSOR_RANK=
-
-##
 # Url to the Redis instance.
 #
 # Used only for bot process. 🤖
-# Used for local userbot. 🐬
 # Production required. ✅
+# Used for local userbot. 🐬
 #
 # @optional {string} = redis://localhost:6379
 REDIS_URL=
 
 ##
-# It was used to log details about the model that was used for tesnorflow.
+# Alarm key for air raid feature
 #
-# Only for testing. 🧪
-# Deprecated ⛔️
+# Used only for bot process. 🤖
+# Production required. ✅
 #
-# @optional {boolean} = false
-TEST_TENSOR=
+# @optional {string}
+ALARM_KEY=
+
+##
+# Telegram user ids who will access private features
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+# Optional for local. 🦕
+#
+# @optional {string}
+USERS_WHITELIST=00000001, 0000002, -10000000
+
+
+
+######
+######
+###### Used only for express server. 🖥️
+######
+######
+
+
+
+##
+# Port of the express application.
+#
+# Used only for express server. 🖥️
+# Production required. ✅
+#
+# @optional {number} = 3000
+PORT=
+
+##
+# Host of the express application.
+#
+# Used only for express server. 🖥️
+# Production required. ✅
+#
+# @optional {string} = localhost
+HOST=
+
+
+
+##########
+##########
+########## Only for testing. 🧪
+########## This is keys which are optional for local testing
+##########
+##########
+
+
 
 ##
 # If true allows to run all calculating logic on one bot process.
@@ -109,13 +224,13 @@ TEST_TENSOR=
 USE_SERVER=
 
 ##
-# To work bot only in comments. It is almost not used in the bot anymore.
+# Specify custom CREATOR_ID for testing it locally.
 #
 # Used only for bot process. 🤖
-# Deprecated ⛔️
+# Only for testing. 🧪
 #
-# @optional {boolean} = true
-ONLY_WORK_IN_COMMENTS=
+# @optional {number}
+CREATOR_ID=
 
 ##
 # Used to show additional logs in the application.
@@ -134,6 +249,17 @@ DEBUG=
 #
 # @optional {boolean} = false
 DEBUG_MIDDLEWARE=
+
+
+
+##########
+##########
+########## Used for local userbot. 🐬
+########## This is keys which are optional for local testing
+##########
+##########
+
+
 
 ##
 # Id of the application for the custom telegram client.
@@ -182,6 +308,43 @@ USERBOT_LOGIN_CODE=
 #
 # @optional {string}
 USERBOT_TRAING_CHAT_NAME=
+
+
+
+##########
+##########
+########## Deprecated ⛔️
+##########
+##########
+
+
+
+##
+# It was used for whitelisting the bot in specific chats. Now it's not actual
+#
+# Deprecated ⛔️
+#
+# @optional {number[]}
+CHAT_WHITELIST=
+
+##
+# It was used to log details about the model that was used for tesnorflow.
+#
+# Only for testing. 🧪
+# Deprecated ⛔️
+#
+# @optional {boolean} = false
+TEST_TENSOR=
+
+##
+# To work bot only in comments. It is almost not used in the bot anymore.
+#
+# Used only for bot process. 🤖
+# Deprecated ⛔️
+#
+# @optional {boolean} = true
+ONLY_WORK_IN_COMMENTS=
+
 
 ##
 # Deprecated ⛔️
@@ -283,100 +446,3 @@ URLS_MSG_REPUTATION=
 # Deprecated ⛔️
 # @optional {number} = -100
 CHANNEL_MSG_REPUTATION=
-
-##
-# Google credentials for google service account. Used only for accessing google sheets.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-#
-# @optional {string}
-GOOGLE_CREDITS=
-
-##
-# Id of the main spreadsheet that we used for Anti Spam Bot.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-#
-# @optional {string}
-GOOGLE_SPREADSHEET_ID=
-
-##
-# Name of the positive sheet for anti-strategic feature.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-# Should be Deprecated ⛔️
-#
-# @optional {string}
-GOOGLE_POSITIVE_SHEET_NAME=
-
-##
-# Name of the negative sheet for anti-strategic feature.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-# Should be Deprecated ⛔️
-#
-# @optional {string}
-GOOGLE_NEGATIVE_SHEET_NAME=
-
-##
-# Name of the swindlers sheet for anti-strategic feature.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-# Should be Deprecated ⛔️
-#
-# @optional {string}
-GOOGLE_SWINDLERS_SHEET_NAME=
-
-##
-# Name of the S3 bucket.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-# Optional for local. 🦕
-#
-# @optional {string}
-S3_BUCKET=
-
-##
-# Url of the S3 bucket.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-# Optional for local. 🦕
-#
-# @optional {string}
-S3_PATH=
-
-##
-# Region of the S3 bucket.
-#
-# Used for both bot and server process. 🤖 🖥️
-# Production required. ✅
-# Optional for local. 🦕
-#
-# @optional {string}
-AWS_REGION=
-
-##
-# Alarm key for air raid feature
-#
-# Used only for bot process. 🤖
-# Production required. ✅
-#
-# @optional {string}
-ALARM_KEY=
-
-##
-# Telegram user ids who will access private features
-#
-# Used only for bot process. 🤖
-# Production required. ✅
-# Optional for local. 🦕
-#
-# @optional {string}
-USERS_WHITELIST=00000001, 0000002, -10000000
