feat(UABOT-116): add missing UNIT_TESTING variable into env template

--- a/.env.template
+++ b/.env.template
@@ -250,6 +250,15 @@ DEBUG=
 # @optional {boolean} = false
 DEBUG_MIDDLEWARE=
 
+##
+# Used for unit testing. It will set itself automatically.
+#
+# Used only for bot process. 🤖
+# Only for testing. 🧪
+#
+# @optional {boolean} = false
+UNIT_TESTING=
+
 
 
 ##########
