feat(UABOT-116): update env template design

--- a/.env.template
+++ b/.env.template
@@ -5,11 +5,11 @@
 ##########
 ##########
 
-##########
-##########
-########## Used for both bot and server process. 🤖 🖥️
-##########
-##########
+######
+######
+###### Used for both bot and server process. 🤖 🖥️
+######
+######
 
 ##
 # Describes current environment
