feat(UABOT-18): fix comments

--- a/.env.template
+++ b/.env.template
@@ -145,6 +145,24 @@ ALARM_KEY=
 # @optional {string}
 USERS_WHITELIST=00000001, 0000002, -10000000
 
+##
+# RabbitMQ username
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+#
+# @optional {string}
+RABBITMQ_USER=
+
+##
+# RabbitMQ password
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+#
+# @optional {string}
+RABBITMQ_PASS=
+
 
 
 ######
@@ -325,99 +343,3 @@ PGDATABASE=
 # Deprecated ⛔️
 # @optional {string} = 5432
 PGPORT=
-
-##
-# @optional {boolean} = false
-DISABLE_USER_REP=
-
-##
-# @optional {number} = 1000
-START_REPUTATION=
-
-##
-# @optional {number} = 100
-CHANNEL_START_REPUTATION=
-
-##
-# @optional {number} = -10
-EMOJI_REPUTATION=
-
-##
-# @optional {number} = -10
-FORMATTINGS_REPUTATION=
-
-##
-# @optional {number} = -10
-URLS_REPUTATION=
-
-##
-# @optional {number} = 5
-NEW_MESSAGE_REPUTATION=
-
-##
-# @optional {number} = 100
-START_MSG_REPUTATION=
-
-##
-# @optional {number} = -5
-FORMATTINGS_MSG_REPUTATION=
-
-##
-# @optional {number} = -5
-EMOJI_MSG_REPUTATION=
-
-##
-# @optional {number} = -80
-URLS_MSG_REPUTATION=
-
-##
-# @optional {number} = -100
-CHANNEL_MSG_REPUTATION=
-
-##
-# @optional {string}
-GOOGLE_CREDITS=
-
-##
-# @optional {string}
-GOOGLE_SPREADSHEET_ID=
-
-##
-# @optional {string}
-GOOGLE_POSITIVE_SHEET_NAME=
-
-##
-# @optional {string}
-GOOGLE_NEGATIVE_SHEET_NAME=
-
-##
-# @optional {string}
-GOOGLE_SWINDLERS_SHEET_NAME=
-
-##
-# @optional {string}
-S3_BUCKET=
-
-##
-# @optional {string}
-S3_PATH=
-
-##
-# @optional {string}
-AWS_REGION=
-
-##
-# @optional {string}
-ALARM_KEY=
-
-##
-# @optional {string}
-USERS_WHITELIST=00000001, 0000002, -10000000
-
-##
-# @optional {string}
-RABBITMQ_USER=
-
-##
-# @optional {string}
-RABBITMQ_PASS=
