--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "aws-sdk": "^2.1276.0",
     "axios": "^1.2.1",
     "bottleneck": "^2.19.5",
+    "crypto-js": "^4.1.1",
     "cyrillic-to-translit-js": "^3.2.1",
     "deepmerge": "^4.2.2",
     "diff": "^5.1.0",
@@ -83,6 +84,8 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.3.0",
     "@swc/jest": "^0.2.24",
+    "@types/cors": "^2.8.13",
+    "@types/crypto-js": "^4.1.1",
     "@types/escape-html": "^1.0.2",
     "@types/eventsource": "^1.1.10",
     "@types/express": "^4.17.15",
@@ -120,6 +123,8 @@
     "type-fest": "^3.4.0",
     "typed-emitter": "^2.1.0",
     "typescript": "^4.9.4",
-    "worker-farm": "^1.7.0"
+    "unzipper": "^0.10.11",
+    "worker-farm": "^1.7.0",
+    "zlib": "^1.0.5"
   }
 }
