feat(UABOT-137): add webview validate token POC endpoint

--- a/.env.template
+++ b/.env.template
@@ -12,6 +12,15 @@
 ######
 
 ##
+# Bot token to authenticate in Telegram.
+#
+# Used for both bot and server process. 🤖 🖥️
+# Production required. ✅
+#
+# @optional {string}
+BOT_TOKEN=
+
+##
 # Describes current environment
 # 'local' | 'develop' | 'production'
 #
@@ -88,15 +97,6 @@ AWS_REGION=
 ######
 
 
-
-##
-# Bot token to authenticate in Telegram.
-#
-# Used only for bot process. 🤖
-# Production required. ✅
-#
-# @optional {string}
-BOT_TOKEN=
 
 ##
 # Port of the bot process.
@@ -191,7 +191,7 @@ HOST=
 # Only for testing. 🧪
 #
 # @optional {boolean} = true
-USE_SERVER=
+USE_SERVER=false
 
 ##
 # Specify custom CREATOR_ID for testing it locally.
