feat(UABOT-138): add no logs chat debug option

--- a/.env.template
+++ b/.env.template
@@ -221,6 +221,15 @@ DEBUG=
 DEBUG_MIDDLEWARE=
 
 ##
+# Used to skip logging into logs chat for local development.
+#
+# Used only for bot process. 🤖
+# Only for testing. 🧪
+#
+# @optional {boolean} = false
+DISABLE_LOGS_CHAT=
+
+##
 # Used for unit testing. It will set itself automatically.
 #
 # Used only for bot process. 🤖
