--- a/.env.template
+++ b/.env.template
@@ -136,6 +136,16 @@ REDIS_URL=
 ALARM_KEY=
 
 ##
+# Telegram user ids who will access to swindlers statistic commands
+#
+# Used only for bot process. 🤖
+# Production required. ✅
+# Optional for local. 🦕
+#
+# @optional {string}
+USERS_FOR_SWINDLERS_STATISTIC_WHITELIST=00000001, 0000002, -10000000
+
+##
 # Telegram user ids who will access private features
 #
 # Used only for bot process. 🤖
@@ -144,7 +154,6 @@ ALARM_KEY=
 #
 # @optional {string}
 USERS_WHITELIST=00000001, 0000002, -10000000
-
 
 
 ######
